[package]
name = "datassim"
version = "0.1.0"
authors = ["doraneko94 <shuntaro94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
static = ["eom/static"]
intel-mkl = ["eom/intel-mkl"]

[dependencies]
eom = { git = "https://github.com/doraneko94/eom", features = ["intel-mkl"]}
ndarray = "0.13"
rand = "0.7"
rand_distr = "0.2"
gnuplot = "0.0.37"